# yt-feed-xml

./: .gitignore  Cargo.toml  flake.nix  linusPlaylist.xml  neverknowsbest.xml  yt_xml.rs
src/: channel.rs  lib.rs  playlist.rs  user.rs  video.rs  xml_feed.rs
test/: cgpgreyUser.xml
