[package]
name = "yt-feed-xml"
version = "0.1.1"
edition = "2021"
license = "Unlicense"
description = "A crate used to parse data from Youtube's XML feeds. WIP USE AT YOUR OWN RISK."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "0.14.23", features = ["client", "http1", "tcp"] }
hyper-tls = "0.5.0"
rust_decimal = "1.26.1"
serde = {version = "1.0.147", features = ["serde_derive"]}
tokio = { version = "1.21.2", features = ["full"] }
chrono = { version = "0.4.23", features = ["serde"] }
async-trait = "0.1.58"
serde-xml-rs = "0.6.0"
derive_builder = { version = "0.12.0", features = ["clippy"] }
